2008-10-09  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c (dh_assistant_init): Remove unused includes
	and the webkit API usage left over from the move to
	DhAssistantView. Rename web_view to view.

2008-10-09  Sven Herzberg  <sven@imendio.com>

	Drop the "_cp" suffix of the old callbacks, now they are vfunc
	implementations

	* src/dh-assistant-view.c: for more consistency with the rest of the
	code

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Dropped the refactoring helpers

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: dropped the getter for the link; hide the
	setter

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Moved the search code into the DhAssistantView

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added the search code
	* src/dh-assistant.c: forward search to DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Dropped assistant_set_link()

	* src/dh-assistant.c: dropped the function

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Moved the real navigation code

	* src/dh-assistant-view.c: added find_in_buffer() and the real code to
	dh_assistant_view_set_link()
	* src/dh-assistant.c: use <glib/gi18n-lib.h> to be properly
	translatable in other applications; dropped the semicolon after
	GET_PRIVATE(); removed find_in_buffer() and the code in
	assistant_set_link()

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Use the DhAssistantView's DhLink

	* src/dh-assistant.c: use the link from the DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a DhLink field to the DhAssistantView

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added getter and setter for the link
	* src/dh-link.h: added DH_IS_LINK

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Connect to the key-press-event of the DhAssistant, not the
	WebKitWebView

	* src/dh-assistant.c: connect to a different widget (no need to
	connect this one on the WebKitWebView)

2008-10-07  Sven Herzberg  <sven@imendio.com>
